@@ -98,8 +98,7 @@ public class ProxyTester {
     if (!fieldProxyMap.containsKey(field.toLowerCase())) {
       fieldProxyMap.put(field.toLowerCase(), new HashMap<Integer, Object>());
     }
-    final Map<Integer, Object> initializerMap =
-        fieldProxyMap.get(field.toLowerCase());
+    final Map<Integer, Object> initializerMap = fieldProxyMap.get(field.toLowerCase());
     initializerMap.put(i, o);
   }
 
@@ -115,10 +114,10 @@ public class ProxyTester {
     // Verify there is a no-argument constructor
     Object o = null;
     try {
-      o = clazz.newInstance();
+      o = clazz.getConstructor().newInstance();
     } catch (final Exception e) {
-      throw new Exception("Class " + clazz
-          + " unexpectedly does not have a no-argument constructor");
+      throw new Exception(
+          "Class " + clazz + " unexpectedly does not have a no-argument constructor");
     }
     setFields(o, false, false, initializer);
     return o;
@@ -133,8 +132,8 @@ public class ProxyTester {
    * @param initializer the initializer
    * @throws Exception the exception
    */
-  protected void setFields(final Object o, final boolean reverseIncludes,
-    final boolean logField, final int initializer) throws Exception {
+  protected void setFields(final Object o, final boolean reverseIncludes, final boolean logField,
+    final int initializer) throws Exception {
     final Set<String> fieldsSeen = new HashSet<>();
     final Method[] methods = clazz.getMethods();
     for (int i = 0; i < methods.length; i++) {
@@ -155,14 +154,12 @@ public class ProxyTester {
       fieldsSeen.add(fieldName.toLowerCase());
 
       /* Check the field name against our include/exclude list. */
-      if (!includes.isEmpty() && !includes.contains(fieldName.toLowerCase())
-          && !reverseIncludes) {
+      if (!includes.isEmpty() && !includes.contains(fieldName.toLowerCase()) && !reverseIncludes) {
         // skip if includes are explicit and none are listed
         continue;
       }
 
-      if (!includes.isEmpty() && includes.contains(fieldName.toLowerCase())
-          && reverseIncludes) {
+      if (!includes.isEmpty() && includes.contains(fieldName.toLowerCase()) && reverseIncludes) {
         // skip if includes are explicit and none are listed
         continue;
       }
@@ -251,9 +248,8 @@ public class ProxyTester {
    * @param initializer the initializer
    * @throws Exception the exception
    */
-  protected void setField(final Object o, final String fieldName,
-    final Method get, final Method set, final Class<?> argType,
-    final int initializer) throws Exception {
+  protected void setField(final Object o, final String fieldName, final Method get,
+    final Method set, final Class<?> argType, final int initializer) throws Exception {
     final Object proxy = makeProxy(fieldName, argType, initializer);
 
     // logger
@@ -264,9 +260,8 @@ public class ProxyTester {
       });
     } catch (final InvocationTargetException e) {
       e.printStackTrace();
-      throw new RuntimeException(
-          "Setter " + set.getDeclaringClass().getName() + "." + set.getName()
-              + " threw " + e.getTargetException().toString());
+      throw new RuntimeException("Setter " + set.getDeclaringClass().getName() + "." + set.getName()
+          + " threw " + e.getTargetException().toString());
     } catch (final IllegalArgumentException e) {
       logger.debug("o=" + o.getClass().getName());
       logger.debug("proxy=" + proxy.getClass().getName());
@@ -287,10 +282,10 @@ public class ProxyTester {
    * @throws Exception the exception
    */
   @SuppressWarnings({
-      "rawtypes"
+      "rawtypes", "deprecation"
   })
-  protected Object makeProxy(final String fieldName, final Class<?> type,
-    final int initializer) throws Exception {
+  protected Object makeProxy(final String fieldName, final Class<?> type, final int initializer)
+    throws Exception {
     // Return field name proxies
     if (fieldProxyMap.containsKey(fieldName.toLowerCase())) {
       return fieldProxyMap.get(fieldName.toLowerCase()).get(initializer);
@@ -368,17 +363,15 @@ public class ProxyTester {
       callbackClass = Class.forName("net.sf.cglib.proxy.Callback");
       fixedValueClass = Class.forName("net.sf.cglib.proxy.FixedValue");
     } catch (final ClassNotFoundException e) {
-      throw new ClassNotFoundException(
-          "Need cglib to make a dummy " + type.getName()
-              + ". Make sure cglib.jar is on " + "your classpath.");
+      throw new ClassNotFoundException("Need cglib to make a dummy " + type.getName()
+          + ". Make sure cglib.jar is on " + "your classpath.");
     }
 
     /* Make a dummy callback (proxies within proxies!) */
     Object callback;
-    callback =
-        Proxy.newProxyInstance(callbackClass.getClassLoader(), new Class[] {
-            fixedValueClass
-        }, new DummyInvocationHandler());
+    callback = Proxy.newProxyInstance(callbackClass.getClassLoader(), new Class[] {
+        fixedValueClass
+    }, new DummyInvocationHandler());
 
     final Method createMethod = enhancerClass.getMethod("create", new Class[] {
         Class.class, callbackClass
@@ -399,8 +392,7 @@ public class ProxyTester {
    * @throws Exception the exception
    */
   @SuppressWarnings("static-method")
-  private Object makeEnum(final Class<?> clazz1, final int initializer)
-    throws Exception {
+  private Object makeEnum(final Class<?> clazz1, final int initializer) throws Exception {
     final Method m = clazz1.getMethod("values", new Class[0]);
     final Object[] o = (Object[]) m.invoke(null, new Object[0]);
     return o[initializer];
